[workspace]
members = ["programs/*"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.27.0" }
shadow-nft-common = { path = "deps/shadow-nft-standard/common/" }
shadow-nft-standard = { path = "deps/shadow-nft-standard/programs/shadow-nft-standard" }
shadowy-super-minter = { path = "deps/shadow-nft-standard/programs/shadowy-super-minter" }
solana-program = "=1.14.18"
solana-sdk = "=1.14.18"
zerocopy-bitslice = { path = "zerocopy-bitslice" }
zerocopy-str = { path = "zerocopy-str" }
