cargo-features = ["workspace-inheritance"]

[package]
name = "rent-nft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rent_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0" }
# spl-associated-token-account = { version = "1.1.3", features = [
#   "no-entrypoint",
# ] }
# spl-token-2022 = "0.6.1"
